--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  font-family: 'Open Sans Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to right, rgba(0,0,0, .5), rgba(255,255,255, .4)), url("../public/parking-hero-img.jpg");
+  background-position: center;
+  background-size: cover;
+  color: #ddd;
 }
 
 code {
